# pawhero-dashboard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPMENT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_auth.py  0003_escalation.py  0004_notification_logs.py  0005_responder_acknowledgments.py  0006_email_verification_otp.py  0007_notification_channels.py  0008_pet_documents.py  0009_notification_prefs.py  0010_push_subscriptions.py  0011_check_in_action_tokens.py  0012_contact_push_subscriptions.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/core/: config.py
backend/app/db/: models.py  seed.py  session.py
backend/app/repositories/: check_in.py  check_in_action_token.py  contact_push.py  documents.py  emergency_chain.py  notification.py  pets.py  push.py  responder.py
backend/app/schemas/: auth.py  check_in.py  common.py  contact_push.py  dashboard.py  documents.py  emergency_chain.py  emergency_profile.py  notification.py  pets.py  public.py  public_check_in.py  push.py
backend/app/services/: auth.py  check_in.py  check_in_action_token.py  contact_push.py  dashboard.py  documents.py  email.py  emergency_chain.py  emergency_profile.py  maintenance.py  pets.py  (+5 more)
backend/tests/: conftest.py  test_api.py  test_check_in.py  test_email.py  test_notifications.py  test_production_hardening.py  test_public_check_in.py  test_push.py  test_storage_api.py
(+117 files in other folders)
